--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
     <!-- Navbar goes here -->
         <div class="container-fluid border-bottom bg-white">
             <div class="row">
-                <div class="col-md">
+                <div class="col-md-8 full">
                     <h1>Cindy Burton</h1>
                 </div>
 
-                <div class="col-md">
-                    <span class="spn">
+                <div class="col-md-4 spn">
                         <a href="index.html">Home</a> | <a href="contact.html">Contact</a> | <a
                             href="portfolio.html">Portfolio</a>
-                    </span>
                 </div>
             </div>
         </div>
@@ -31,7 +29,7 @@
 
     <!-- Container class goes here -->
     <div class="container border bg-white mt-10 mb-10 ml-10">
-        <div class="row">
+        <div class="row full">
             <section class="col-md">
                 <h2>About Me</h2>
             </section>
